--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body { font-family: var(--font-family); background-color: var(--bg-color-dark); 
 .profile-info { display: flex; align-items: center; gap: 15px; }
 #user-photo { width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 2px solid var(--primary-color-dark); }
 .user-details h1 { font-size: 1.2rem; font-weight: 700; }
+.verified-icon { font-size: 1rem; margin-left: 5px; color: var(--primary-color-dark); }
 .user-details p { font-size: 0.9rem; font-weight: 600; }
 main { padding: 15px; }
 .page { display: none; }
@@ -35,13 +36,15 @@ main { padding: 15px; }
 #referral-link { width: 100%; padding: 10px; text-align: center; border: 1px dashed var(--primary-color-dark); border-radius: 8px; margin: 10px 0; background: none; color: white; }
 #copy-ref-link-btn { width: 100%; padding: 12px; border: none; border-radius: 8px; color: #fff; background-color: var(--primary-color-dark); font-weight: 600; cursor: pointer; }
 .task-container { padding: 20px; border-radius: 12px; text-align: center; margin-bottom: 20px; background-color: var(--secondary-bg-dark); }
+.task-icon { font-size: 3rem; margin-bottom: 15px; color: var(--primary-color-dark); }
 .action-btn { width: 100%; padding: 15px; font-size: 1rem; font-weight: 700; color: #fff; border: none; border-radius: 10px; cursor: pointer; background-color: var(--primary-color-dark); }
 .bottom-nav { position: fixed; bottom: 0; left: 0; right: 0; max-width: 500px; margin: 0 auto; display: flex; justify-content: space-around; padding: 5px 0; background-color: var(--secondary-bg-dark); border-top: 1px solid var(--border-color-dark); }
 .nav-btn { background: none; border: none; cursor: pointer; display: flex; flex-direction: column; align-items: center; font-size: 0.7rem; color: var(--subtle-text-dark); flex-grow: 1; }
 .nav-btn i { font-size: 1.4rem; margin-bottom: 3px; }
 .nav-btn.active { color: var(--primary-color-dark); font-weight: 700; }
-.modal { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.95); justify-content: center; align-items: center; }
-.modal-content { padding: 30px; border-radius: 15px; text-align: center; background-color: var(--secondary-bg-dark); color: white; border: 1px solid var(--primary-color-dark); width: 85%; }
+.modal { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); justify-content: center; align-items: center; }
+.modal-content { padding: 30px; border-radius: 15px; text-align: center; background-color: var(--secondary-bg-dark); color: white; border: 1px solid var(--primary-color-dark); }
+
 #continue-btn { display: none; margin-top: 15px; background-color: #28a745; }
 </style>
 </head>
@@ -50,9 +53,9 @@ main { padding: 15px; }
 <div id="app">
 <header class="profile-header">
 <div class="profile-info">
-<img id="user-photo" src="https://via.placeholder.com/60">
+<img id="user-photo" src="https://via.placeholder.com/60" alt="User Photo">
 <div class="user-details">
-<h1 id="user-name">Loading... <i class="fas fa-check-circle" style="color:#0a84ff;"></i></h1>
+<h1 id="user-name">Loading... <i class="fas fa-check-circle verified-icon"></i></h1>
 <p>Balance: <span id="user-points">0.00</span> TK</p>
 </div>
 </div>
@@ -60,24 +63,32 @@ main { padding: 15px; }
 
 <main id="main-content">
 <div id="home-page" class="page active">
+<h2>Dashboard</h2>
 <div class="stats-grid">
 <div class="stat-card"><h3>Ads (Slot)</h3><p><span id="daily-ads-watched">0</span>/25</p></div>
 <div class="stat-card"><h3>Referrals</h3><p id="referral-count">0</p></div>
 </div>
 <div class="referral-section">
 <h3>Refer & Earn!</h3>
-<p style="font-size: 0.8rem; color: #00ff00;">প্রতি রেফারে ২ টাকা বোনাস!</p>
+<p style="font-size: 0.8rem; margin-bottom: 5px; color: #00ff00;">প্রতি রেফারে পাবেন ২ টাকা বোনাস!</p>
 <input type="text" id="referral-link" readonly>
 <button id="copy-ref-link-btn">Copy Link</button>
 </div>
 </div>
 
 <div id="tasks-page" class="page">
+<h2>Tasks</h2>
 <div class="task-container">
-<i class="fas fa-video" style="font-size: 3rem; color: var(--primary-color-dark); margin-bottom: 10px;"></i>
-<h3>Watch Ad & Earn</h3>
-<p>প্রতি অ্যাডে ০.১০ টাকা (Step 1 + Step 2)</p>
-<button id="watch-ad-btn" class="action-btn">Start Task</button>
+<i class="fas fa-video task-icon"></i>
+<h3>Watch Rewarded Ad</h3>
+<p>Earn 0.15 TK (Step 1 + Step 2)</p>
+<button id="watch-ad-btn" class="action-btn">Watch Ad</button>
+</div>
+<div class="task-container">
+<i class="fab fa-telegram task-icon"></i>
+<h3>Join Channel</h3>
+<p>Get 2 TK bonus.</p>
+<button id="join-channel-btn" class="action-btn">Join & Claim</button>
 </div>
 </div>
 
@@ -91,7 +102,7 @@ main { padding: 15px; }
 </select>
 <input type="text" id="account-number" placeholder="Account Number" style="width:100%; padding:12px; margin-bottom:10px; border-radius:8px; background: #2c2c2e; color: white; border: none;" required>
 <input type="number" id="amount" placeholder="Amount" style="width:100%; padding:12px; margin-bottom:10px; border-radius:8px; background: #2c2c2e; color: white; border: none;" required>
-<button type="submit" class="action-btn">Submit Request</button>
+<button type="submit" id="withdraw-submit-btn" class="action-btn">Submit Request</button>
 </form>
 </div>
 </main>
@@ -105,10 +116,10 @@ main { padding: 15px; }
 
 <div id="loading-modal" class="modal">
 <div class="modal-content">
-<h3 id="modal-step-title" style="color:#0a84ff;">Step 1: Monetag Ad</h3>
-<p id="loading-text" style="font-size: 1.2rem; margin-top: 10px;">অপেক্ষা করুন: 15s</p>
+<h3 id="modal-step-title" style="margin-bottom:10px; color:#0a84ff;">Step 1: Monetag Ad</h3>
+<p id="loading-text" style="font-size: 1.2rem; font-weight: bold;">Loading Ad...</p>
 <button id="continue-btn" class="action-btn">Continue to Step 2</button>
-<p style="font-size: 0.8rem; margin-top: 10px; color: #8e8e93;">পুরো সময় না দেখলে টাকা যোগ হবে না।</p>
+<p style="font-size: 0.8rem; margin-top: 10px; color: var(--subtle-text-dark);">টাকা পেতে পুরো সময় অপেক্ষা করুন</p>
 </div>
 </div>
 
@@ -120,16 +131,18 @@ main { padding: 15px; }
 document.addEventListener('DOMContentLoaded', () => {
 const tg = window.Telegram.WebApp;
 
-// --- কনফিগারেশন ---
 const BOT_TOKEN = "8546793925:AAFs2xfGFkutrydu4TRdVQxxjU1N0g3HaDU";
 const ADMIN_CHAT_ID = "7677039712"; 
 const BOT_USERNAME = "globalearningbdbot"; 
-const MONETAG_DIRECT_LINK = "https://otieu.com/4/10512972"; // তোমার দেওয়া লিঙ্ক বসানো হয়েছে
-const POINTS_PER_AD = 0.10; 
+const MONETAG_DIRECT_LINK = "https://otieu.com/4/10512972"; 
+const POINTS_PER_AD = 0.15; 
+const CHANNEL_BONUS = 2; 
+const MIN_WITHDRAW = 40; 
 const SLOT_LIMIT = 25; 
-const COOLDOWN_TIME = 4 * 60 * 60 * 1000; 
+const AD_WAIT_TIME = 15; 
+const CHANNEL_LINK = "https://t.me/Incometipsbb";
 
-let userState = { points: 0, dailyAdWatchCount: 0, userId: null, lastResetTime: 0 };
+let userState = { points: 0, dailyAdWatchCount: 0, userId: null, hasJoinedChannel: false, lastResetTime: 0 };
 
 const saveState = () => { if(userState.userId) localStorage.setItem(`userState_${userState.userId}`, JSON.stringify(userState)); };
 const loadState = (userId) => { 
@@ -157,7 +170,7 @@ const contBtn = document.getElementById('continue-btn');
 modal.style.display = 'flex';
 contBtn.style.display = 'none';
 stepTitle.innerText = "Step 1: Monetag Ad";
-let timeLeft = 15;
+let timeLeft = AD_WAIT_TIME;
 text.innerText = `অপেক্ষা করুন: ${timeLeft}s`;
 
 const timer1 = setInterval(() => {
@@ -170,13 +183,14 @@ contBtn.style.display = 'block';
 }
 }, 1000);
 
+// পপআপ অ্যাড শো করবে
 show_10506581().catch(() => {});
 
 contBtn.onclick = () => {
 window.open(MONETAG_DIRECT_LINK, '_blank');
 contBtn.style.display = 'none';
 stepTitle.innerText = "Step 2: Verification";
-let timeLeft2 = 15;
+let timeLeft2 = AD_WAIT_TIME;
 text.innerText = `ভেরিফাই হচ্ছে: ${timeLeft2}s`;
 
 const timer2 = setInterval(() => {
@@ -188,14 +202,40 @@ modal.style.display = 'none';
 userState.points += POINTS_PER_AD;
 userState.dailyAdWatchCount++;
 saveState(); updateUI();
+// টাস্ক শেষে ইন্টারস্টেসিয়াল পপ আপ অ্যাড
 show_10506581('pop').catch(() => {});
-tg.showAlert("অভিনন্দন! ০.১০ টাকা যোগ হয়েছে।");
+tg.showAlert(`অভিনন্দন! আপনি ${POINTS_PER_AD} টাকা পেয়েছেন।`);
 }
 }, 1000);
 };
 });
 
-// Withdraw এবং Navigation লজিক আগের মতোই কাজ করবে...
+document.getElementById('join-channel-btn').addEventListener('click', () => {
+tg.openTelegramLink(CHANNEL_LINK);
+if(!userState.hasJoinedChannel) {
+userState.points += CHANNEL_BONUS; userState.hasJoinedChannel = true;
+saveState(); updateUI(); tg.showAlert(`বোনাস ২ টাকা যোগ হয়েছে!`);
+} else { tg.showAlert("আপনি অলরেডি বোনাস নিয়েছেন।"); }
+});
+
+document.getElementById('withdraw-form').addEventListener('submit', async (e) => {
+e.preventDefault();
+const amount = parseFloat(document.getElementById('amount').value);
+if(amount < MIN_WITHDRAW || amount > userState.points) { tg.showAlert(`মিনিমাম উইথড্র ${MIN_WITHDRAW} টাকা।`); return; }
+const method = document.getElementById('withdraw-method').value;
+const acc = document.getElementById('account-number').value;
+const user = tg.initDataUnsafe.user;
+const msg = `💰 নতুন রিকোয়েস্ট:\n👤 ${user.first_name}\n📱 ${method}\n📞 ${acc}\n💵 ${amount} TK`;
+try {
+const res = await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+method: 'POST',
+headers: {'Content-Type': 'application/json'},
+body: JSON.stringify({ chat_id: ADMIN_CHAT_ID, text: msg })
+});
+if(res.ok) { userState.points -= amount; saveState(); updateUI(); tg.showAlert("রিকোয়েস্ট পাঠানো হয়েছে!"); }
+} catch(e) { tg.showAlert("সার্ভার সমস্যা!"); }
+});
+
 document.querySelectorAll('.nav-btn').forEach(btn => {
 btn.addEventListener('click', () => {
 document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
@@ -203,6 +243,11 @@ document.getElementById(btn.dataset.page).classList.add('active');
 document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
 btn.classList.add('active');
 });
+});
+
+document.getElementById('copy-ref-link-btn').addEventListener('click', () => {
+navigator.clipboard.writeText(document.getElementById('referral-link').value);
+tg.showAlert("লিঙ্ক কপি হয়েছে!");
 });
 
 tg.ready();
