Remove navigation and loading modal from index.html
Removed navigation and modal elements along with associated JavaScript functionality.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ main { padding: 15px; }
 .modal { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); justify-content: center; align-items: center; }
 .modal-content { padding: 30px; border-radius: 15px; text-align: center; background-color: var(--secondary-bg-dark); color: white; border: 1px solid var(--primary-color-dark); }
 
+/* Continue Button CSS */
 #continue-btn { display: none; margin-top: 15px; background-color: #28a745; }
 </style>
 </head>
@@ -105,155 +106,3 @@ main { padding: 15px; }
 <button type="submit" id="withdraw-submit-btn" class="action-btn">Submit Request</button>
 </form>
 </div>
-</main>
-
-<nav class="bottom-nav">
-<button class="nav-btn active" data-page="home-page"><i class="fas fa-home"></i><span>Home</span></button>
-<button class="nav-btn" data-page="tasks-page"><i class="fas fa-tasks"></i><span>Tasks</span></button>
-<button class="nav-btn" data-page="withdraw-page"><i class="fas fa-wallet"></i><span>Withdraw</span></button>
-</nav>
-</div>
-
-<div id="loading-modal" class="modal">
-<div class="modal-content">
-<h3 id="modal-step-title" style="margin-bottom:10px; color:#0a84ff;">Step 1: Monetag Ad</h3>
-<p id="loading-text" style="font-size: 1.2rem; font-weight: bold;">Loading Ad...</p>
-<button id="continue-btn" class="action-btn">Continue to Step 2</button>
-<p style="font-size: 0.8rem; margin-top: 10px; color: var(--subtle-text-dark);">টাকা পেতে পুরো সময় অপেক্ষা করুন</p>
-</div>
-</div>
-
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src='https://alwingulla.com/88/pfe/current/tag.min.js?z=10506581' data-cfasync="false" async></script>
-<script src='//libtl.com/sdk.js' data-zone='10506581' data-sdk='show_10506581'></script>
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-const tg = window.Telegram.WebApp;
-
-const BOT_TOKEN = "8546793925:AAFs2xfGFkutrydu4TRdVQxxjU1N0g3HaDU";
-const ADMIN_CHAT_ID = "7677039712"; 
-const BOT_USERNAME = "globalearningbdbot"; 
-const MONETAG_DIRECT_LINK = "https://otieu.com/4/10512972"; 
-const POINTS_PER_AD = 0.15; 
-const CHANNEL_BONUS = 2; 
-const MIN_WITHDRAW = 40; 
-const SLOT_LIMIT = 25; 
-const AD_WAIT_TIME = 15; 
-const CHANNEL_LINK = "https://t.me/Incometipsbb";
-
-let userState = { points: 0, dailyAdWatchCount: 0, userId: null, hasJoinedChannel: false, lastResetTime: 0 };
-
-const saveState = () => { if(userState.userId) localStorage.setItem(`userState_${userState.userId}`, JSON.stringify(userState)); };
-const loadState = (userId) => { 
-const s = localStorage.getItem(`userState_${userId}`); 
-if(s) userState = JSON.parse(s);
-};
-
-const updateUI = () => {
-const user = tg.initDataUnsafe.user;
-if(user) {
-document.getElementById('user-photo').src = user.photo_url || 'https://via.placeholder.com/60';
-document.getElementById('user-name').innerText = user.first_name;
-document.getElementById('referral-link').value = `https://t.me/${BOT_USERNAME}?start=ref_${user.id}`;
-}
-document.getElementById('user-points').innerText = userState.points.toFixed(2);
-document.getElementById('daily-ads-watched').innerText = userState.dailyAdWatchCount;
-};
-
-document.getElementById('watch-ad-btn').addEventListener('click', () => {
-const modal = document.getElementById('loading-modal');
-const text = document.getElementById('loading-text');
-const stepTitle = document.getElementById('modal-step-title');
-const contBtn = document.getElementById('continue-btn');
-
-modal.style.display = 'flex';
-contBtn.style.display = 'none';
-stepTitle.innerText = "Step 1: Monetag Ad";
-let timeLeft = AD_WAIT_TIME;
-text.innerText = `অপেক্ষা করুন: ${timeLeft}s`;
-
-const timer1 = setInterval(() => {
-timeLeft--;
-text.innerText = `অপেক্ষা করুন: ${timeLeft}s`;
-if(timeLeft <= 0) {
-clearInterval(timer1);
-text.innerText = "Step 1 শেষ! নিচে ক্লিক করুন।";
-contBtn.style.display = 'block';
-}
-}, 1000);
-
-// পপআপ অ্যাড শো করবে
-show_10506581().catch(() => {});
-
-contBtn.onclick = () => {
-window.open(MONETAG_DIRECT_LINK, '_blank');
-contBtn.style.display = 'none';
-stepTitle.innerText = "Step 2: Verification";
-let timeLeft2 = AD_WAIT_TIME;
-text.innerText = `ভেরিফাই হচ্ছে: ${timeLeft2}s`;
-
-const timer2 = setInterval(() => {
-timeLeft2--;
-text.innerText = `ভেরিফাই হচ্ছে: ${timeLeft2}s`;
-if(timeLeft2 <= 0) {
-clearInterval(timer2);
-modal.style.display = 'none';
-userState.points += POINTS_PER_AD;
-userState.dailyAdWatchCount++;
-saveState(); updateUI();
-// টাস্ক শেষে ইন্টারস্টেসিয়াল পপ আপ অ্যাড
-show_10506581('pop').catch(() => {});
-tg.showAlert(`অভিনন্দন! আপনি ${POINTS_PER_AD} টাকা পেয়েছেন।`);
-}
-}, 1000);
-};
-});
-
-document.getElementById('join-channel-btn').addEventListener('click', () => {
-tg.openTelegramLink(CHANNEL_LINK);
-if(!userState.hasJoinedChannel) {
-userState.points += CHANNEL_BONUS; userState.hasJoinedChannel = true;
-saveState(); updateUI(); tg.showAlert(`বোনাস ২ টাকা যোগ হয়েছে!`);
-} else { tg.showAlert("আপনি অলরেডি বোনাস নিয়েছেন।"); }
-});
-
-document.getElementById('withdraw-form').addEventListener('submit', async (e) => {
-e.preventDefault();
-const amount = parseFloat(document.getElementById('amount').value);
-if(amount < MIN_WITHDRAW || amount > userState.points) { tg.showAlert(`মিনিমাম উইথড্র ${MIN_WITHDRAW} টাকা।`); return; }
-const method = document.getElementById('withdraw-method').value;
-const acc = document.getElementById('account-number').value;
-const user = tg.initDataUnsafe.user;
-const msg = `💰 নতুন রিকোয়েস্ট:\n👤 ${user.first_name}\n📱 ${method}\n📞 ${acc}\n💵 ${amount} TK`;
-try {
-const res = await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
-method: 'POST',
-headers: {'Content-Type': 'application/json'},
-body: JSON.stringify({ chat_id: ADMIN_CHAT_ID, text: msg })
-});
-if(res.ok) { userState.points -= amount; saveState(); updateUI(); tg.showAlert("রিকোয়েস্ট পাঠানো হয়েছে!"); }
-} catch(e) { tg.showAlert("সার্ভার সমস্যা!"); }
-});
-
-document.querySelectorAll('.nav-btn').forEach(btn => {
-btn.addEventListener('click', () => {
-document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-document.getElementById(btn.dataset.page).classList.add('active');
-document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-btn.classList.add('active');
-});
-});
-
-document.getElementById('copy-ref-link-btn').addEventListener('click', () => {
-navigator.clipboard.writeText(document.getElementById('referral-link').value);
-tg.showAlert("লিঙ্ক কপি হয়েছে!");
-});
-
-tg.ready();
-const user = tg.initDataUnsafe.user;
-if(user) { userState.userId = user.id; loadState(user.id); updateUI(); }
-});
-</script>
-</body>
-</html>
